# game_of_life

./: README.md  main.py  pyproject.toml
game_of_life/: board.py  constants.py  genetic_algorithm.py  helper.py
